test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Function string::concat expects 2 args, but got 4.
    from wrong_arg_count_class_method.lly:8
]#

var s: string = ""

s.concat(1, 2, 3)
